@@ -30,7 +30,6 @@ include 'modules/GEDFact_assistant/_CENS/js/census_5_input.js.php';
 ?>
 
 <div class="cens_data">
-	<!--[if IE]><br /><![endif]-->
 	<table id="tblSample">
 		<thead></thead>
 		<tbody></tbody>
