@@ -51,7 +51,7 @@
 	float: left;
 	margin: 0.5em 0 0 0.5em;
 	width: 23.1em;
-	height: 33.9em;
+	height: 34.4em;
 	overflow: auto; 
 	/*border: 1px solid red; */
 }
